@@ -4,6 +4,13 @@
 
  Changes between 0.9.6c and 0.9.6d  [XX xxx XXXX]
 
+  *) Fix object definitions for Private and Enterprise: they were not
+     recognized in their shortname (=lowercase) representation. Extend
+     obj_dat.pl to issue an error when using undefined keywords instead
+     of silently ignoring the problem (Svenning Sorensen
+     <sss@sss.dnsalias.net>).
+     [Lutz Jaenicke]
+
   *) Fix DH_generate_parameters() so that it works for 'non-standard'
      generators, i.e. generators other than 2 and 5.  (Previously, the
      code did not properly initialise the 'add' and 'rem' values to
